--- a/index.html
+++ b/index.html
@@ -17,10 +17,7 @@
       <div class="slide" style="background-image: url('img/foto_3.jpeg')">
         <h3>Букет</h3>
       </div>
-      <div
-        class="slide active"
-        style="background-image: url('img/foto_4.jpeg')"
-      >
+      <div class="slide" style="background-image: url('img/foto_4.jpeg')">
         <h3>Букет</h3>
       </div>
       <div class="slide" style="background-image: url('img/foto_5.jpeg')">
